force-app/main/default/objects/UHT_Deployment_Log__c/UHT_Deployment_Log__c.object-meta.xml
<CustomObject>
    <label>UHT Deployment Log</label>
    <nameField>
        <displayFormat>DEP-{00000}</displayFormat>
        <label>Deployment Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UHT Deployment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>