force-app/main/default/objects/UHT_Deployment_Log__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <description>When the deployment completed (success or failure)</description>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>