force-app/main/default/objects/UHT_Deployment_Log__c/fields/Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Id__c</fullName>
    <description>Salesforce Metadata API async deployment ID</description>
    <label>Deployment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>