force-app/main/default/objects/UHT_Deployment_Log__c/fields/Initiated_At__c.field-meta.xml
<CustomField>
    <fullName>Initiated_At__c</fullName>
    <description>When the deployment was initiated</description>
    <label>Initiated At</label>
    <type>DateTime</type>
</CustomField>