force-app/main/default/objects/UHT_Deployment_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>API name of the object the trigger was deployed for</description>
    <label>Object Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>