force-app/main/default/objects/UHT_Deployment_Log__c/fields/Trigger_Name__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Name__c</fullName>
    <description>Name of the deployed trigger</description>
    <label>Trigger Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>